--- a/.github/workflows/github-star-notifier.yml
+++ b/.github/workflows/github-star-notifier.yml
@@ -29,7 +29,7 @@ jobs:
           path: |
             github-star-notifier/.timestamp
           key: GitHubStarNotifier-LastExecutionTime
-          restore-keys: GitHubStarNotifier-LastExecutionTime-
+          restore-keys: GitHubStarNotifier-LastExecutionTime
       # .timestampファイルの存在チェック
       - name: Check file exists
         id: check_file
@@ -58,4 +58,4 @@ jobs:
         with:
           path: |
             github-star-notifier/.timestamp
-          key: GitHubStarNotifier-LastExecutionTime-${{github.run_id}}
+          key: GitHubStarNotifier-LastExecutionTime
