--- a/github-star-notifier/deno.jsonc
+++ b/github-star-notifier/deno.jsonc
@@ -3,6 +3,18 @@
     "strict": true
   },
   "nodeModulesDir": "auto",
+  "imports": {
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.0/load",
+    "@std/async": "jsr:@std/async@^1.0.0",
+    "@std/log": "jsr:@std/log@^0.224.0",
+    "@atproto/api": "npm:@atproto/api@^0.13.0",
+    "@mikaelporttila/rss": "jsr:@mikaelporttila/rss@^1.1.0",
+    "jsdom": "npm:jsdom@^24.0.0",
+    "@mozilla/readability": "npm:@mozilla/readability@^0.5.0",
+    "@google/generative-ai": "npm:@google/generative-ai@^0.21.0",
+    "open-graph-scraper": "npm:open-graph-scraper@^6.0.0",
+    "imagemagick": "https://deno.land/x/imagemagick_deno@0.0.31/mod.ts"
+  },
   "fmt": {
     "include": ["./"],
     "indentWidth": 2,
