feat: Gemini SDK を @google/genai に移行し機能強化
主な変更点:
- @google/generative-ai から @google/genai v1.25.0 にアップグレード
- urlContext と googleSearch ツールを追加して要約精度を向上
- 要約プロンプトを改善: 出力形式を明確化し、要約文のみを出力
- API レスポンスの取得方法を新 SDK に適応

--- a/github-star-notifier/deno.jsonc
+++ b/github-star-notifier/deno.jsonc
@@ -11,7 +11,7 @@
     "@mikaelporttila/rss": "jsr:@mikaelporttila/rss@^1.1.0",
     "jsdom": "npm:jsdom@^24.0.0",
     "@mozilla/readability": "npm:@mozilla/readability@^0.5.0",
-    "@google/generative-ai": "npm:@google/generative-ai@^0.21.0",
+    "@google/genai": "npm:@google/genai@^1.25.0",
     "open-graph-scraper": "npm:open-graph-scraper@^6.0.0",
     "imagemagick": "https://deno.land/x/imagemagick_deno@0.0.31/mod.ts"
   },
