--- a/.github/workflows/github-star-notifier.yml
+++ b/.github/workflows/github-star-notifier.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/cache/restore@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: github-star-notifier/data/.timestamp
-          key: github-star-notifier-timestamp
+          key: github-star-notifier-timestamp-${{ github.run_id }}
           restore-keys: github-star-notifier-timestamp-
       # dotenvxのインストール
       - name: Install dotenvx
@@ -46,4 +46,4 @@ jobs:
         if: always()
         with:
           path: github-star-notifier/data/.timestamp
-          key: github-star-notifier-timestamp
+          key: github-star-notifier-timestamp-${{ github.run_id }}
