refactor: DDDアーキテクチャへのリファクタリング
ドメイン駆動設計のレイヤードアーキテクチャとDDD戦術パターンを導入し、
保守性とテスタビリティを大幅に向上させました。

**DDD パターンの実装**
- Value Objects: Url, Summary, OpenGraphData（不変性と自己検証）
- Repository Pattern: データアクセスの抽象化
- Use Case: FetchAndNotifyUseCase でビジネスロジックを実装
- 依存性注入(DI): テスト容易性の向上

**レイヤー構造**
- domain/: ビジネスロジックとインターフェース
- application/: ユースケースとフォーマッター
- infrastructure/: 外部システムとの統合

**コード品質**
- Lint エラー 26個を解消
- テスト 89個を追加（全て成功）
- Lefthook による品質保証の自動化

**リファクタリング**
- main.ts を DI ベースに変更
- 関数をクラスベースに再構成
- URL 処理の重複コード削除
- 構造化ロギングへ移行

--- a/github-star-notifier/deno.jsonc
+++ b/github-star-notifier/deno.jsonc
@@ -15,6 +15,12 @@
     "open-graph-scraper": "npm:open-graph-scraper@^6.0.0",
     "imagemagick": "https://deno.land/x/imagemagick_deno@0.0.31/mod.ts"
   },
+  "tasks": {
+    "test": "deno test --allow-env --allow-net --allow-read --allow-write",
+    "test:watch": "deno test --watch --allow-env --allow-net --allow-read --allow-write",
+    "test:coverage": "deno test --coverage=coverage --allow-env --allow-net --allow-read --allow-write && deno coverage coverage",
+    "test:coverage:html": "deno test --coverage=coverage --allow-env --allow-net --allow-read --allow-write && deno coverage coverage --html"
+  },
   "fmt": {
     "include": ["./"],
     "indentWidth": 2,
