refactor: Import Mapsの活用とVSCode設定の最適化
主な変更点:
- インポートパスをImport Maps経由に統一
  - npm:/jsr:プレフィックスを除去し、deno.jsoncの定義を活用
  - AtprotoAPIを名前空間インポート(import * as)に変更
- VSCode設定を最適化
  - マルチプロジェクト対応のためenablePathsを明示
  - 各プロジェクトに個別のdeno.config設定を追加
  - Deno拡張機能を推奨に追加
- deno.jsoncのコンパイラオプションを明示化

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -8,7 +8,8 @@ pre-commit:
     # フォーマットチェック
     format:
       glob: "github-star-notifier/**/*.{ts,tsx,js,jsx,json,jsonc}"
-      run: deno fmt --check {staged_files}
+      run: deno fmt {staged_files}
+      stage_fixed: true
 
     # リントチェック
     lint:
