--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,15 @@
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
-  "cSpell.words": ["atproto", "bluesky", "bsky", "Graphemer", "Twitterbot"],
-  "deno.codeLens.implementations": true,
-  "deno.codeLens.references": true,
-  "deno.codeLens.referencesAllFunctions": true,
-  "deno.enable": true,
-  "deno.lint": true,
-  "deno.suggest.imports.hosts": {
-    "https://deno.land": true
+  "[javascript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
   },
-  "deno.unstable": true
+  "cSpell.words": ["atproto", "bluesky", "bsky", "Graphemer", "Twitterbot"],
+  "deno.enable": true,
+  "deno.enablePaths": [
+    "./github-star-notifier",
+    "./link-insight-notifier",
+    "./rss-feed-notifier"
+  ],
+  "deno.lint": true
 }
