--- a/github-star-notifier/deno.jsonc
+++ b/github-star-notifier/deno.jsonc
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "lib": ["deno.window"]
   },
   "nodeModulesDir": "auto",
   "imports": {
     "@std/dotenv": "jsr:@std/dotenv@^0.225.0/load",
-    "@std/async": "jsr:@std/async@^1.0.0",
+    "@std/async": "jsr:@std/async@^1.0.0/abortable",
     "@std/log": "jsr:@std/log@^0.224.0",
     "@atproto/api": "npm:@atproto/api@^0.13.0",
     "@mikaelporttila/rss": "jsr:@mikaelporttila/rss@^1.1.0",
