--- a/rss-feed-notifier/deno.jsonc
+++ b/rss-feed-notifier/deno.jsonc
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true
   },
   "nodeModulesDir": "auto",
+  "tasks": {
+    "start": "deno run --allow-net --allow-read --allow-write --allow-env main.ts",
+    "dev": "deno run --allow-net --allow-read --allow-write --allow-env --watch main.ts",
+    "test": "deno test --allow-read --allow-write --allow-env",
+    "check": "deno check main.ts",
+    "fmt": "deno fmt",
+    "fmt:check": "deno fmt --check",
+    "lint": "deno lint"
+  },
   "fmt": {
     "include": ["./"],
+    "exclude": ["node_modules/", "data/", "temp/", "*.avif"],
     "indentWidth": 2,
-    "lineWidth": 120,
+    "lineWidth": 100,
     "proseWrap": "always",
     "singleQuote": true,
     "useTabs": false
   },
   "lint": {
     "include": ["./"],
+    "exclude": ["node_modules/", "data/", "temp/"],
     "rules": {
       "tags": ["recommended"]
     }
